@@ -2,27 +2,26 @@ package com.tissue.activitylog;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.tissue.activitylog.application.dto.response.ActivityLogResponse;
-import com.tissue.activitylog.application.port.out.ActivityLogRepository;
-import com.tissue.activitylog.application.service.ActivityLogQueryService;
-import com.tissue.activitylog.domain.ActivityLog;
-import com.tissue.activitylog.domain.ActivityType;
-import com.tissue.dto.CursorPageResponse;
-import com.tissue.global.vo.EntityReference;
-import com.tissue.member.application.port.out.MemberCommandRepository;
-import com.tissue.member.domain.Member;
-import com.tissue.project.application.dto.ProjectMemberContext;
-import com.tissue.project.application.port.out.ProjectCommandRepository;
-import com.tissue.project.application.port.out.ProjectMemberCommandRepository;
-import com.tissue.project.domain.Project;
-import com.tissue.project.domain.ProjectMember;
-import com.tissue.project.domain.ProjectRole;
+import com.tissue.feature.activitylog.application.dto.response.ActivityLogResponse;
+import com.tissue.feature.activitylog.application.port.repository.ActivityLogCommandRepository;
+import com.tissue.feature.activitylog.application.service.ActivityLogQueryService;
+import com.tissue.feature.activitylog.domain.ActivityLog;
+import com.tissue.feature.activitylog.domain.ActivityType;
+import com.tissue.feature.member.application.port.repository.MemberCommandRepository;
+import com.tissue.feature.member.domain.Member;
+import com.tissue.feature.project.application.port.repository.ProjectCommandRepository;
+import com.tissue.feature.project.application.port.repository.ProjectMemberCommandRepository;
+import com.tissue.feature.project.domain.Project;
+import com.tissue.feature.project.domain.ProjectMember;
+import com.tissue.feature.workspace.application.port.repository.WorkspaceMemberCommandRepository;
+import com.tissue.feature.workspace.application.port.repository.WorkspaceRepository;
+import com.tissue.feature.workspace.domain.Workspace;
+import com.tissue.feature.workspace.domain.WorkspaceMember;
+import com.tissue.feature.workspace.domain.enums.WorkspaceRole;
+import com.tissue.shared.dto.CursorPageResponse;
+import com.tissue.shared.dto.IssueIdentifier;
+import com.tissue.shared.vo.EntityReference;
 import com.tissue.support.IntegrationTestSupport;
-import com.tissue.workspace.application.port.out.WorkspaceMemberCommandRepository;
-import com.tissue.workspace.application.port.out.WorkspaceRepository;
-import com.tissue.workspace.domain.Workspace;
-import com.tissue.workspace.domain.WorkspaceMember;
-import com.tissue.workspace.domain.enums.WorkspaceRole;
 import java.util.Map;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
@@ -36,7 +35,7 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
     ActivityLogQueryService queryService;
 
     @Autowired
-    ActivityLogRepository activityLogRepository;
+    ActivityLogCommandRepository activityLogCommandRepository;
 
     @Autowired
     MemberCommandRepository memberCommandRepository;
@@ -56,7 +55,6 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
     private Member actor;
     private Workspace workspace;
     private Project project;
-    private ProjectMemberContext actorContext;
 
     @BeforeEach
     void setupData() {
@@ -79,17 +77,6 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
         // add Member(actor) to Project
         ProjectMember actorProjectMember = ProjectMember.create(project, actorWsMember);
         projectMemberCommandRepository.save(actorProjectMember);
-
-        actorContext = new ProjectMemberContext(
-                actorProjectMember.getId(),
-                actor.getId(),
-                workspace.getId(),
-                workspace.getKey(),
-                project.getId(),
-                project.getKey(),
-                actorWsMember.getDisplayName(),
-                actorWsMember.getRole(),
-                ProjectRole.MEMBER);
     }
 
     @Test
@@ -104,7 +91,7 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
                 .actorMemberId(actor.getId())
                 .data(Map.of("test", "data1"))
                 .build();
-        activityLogRepository.save(log1);
+        activityLogCommandRepository.save(log1);
 
         ActivityLog log2 = ActivityLog.builder()
                 .eventId(UUID.randomUUID())
@@ -113,10 +100,10 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
                 .actorMemberId(actor.getId())
                 .data(Map.of("test", "data2"))
                 .build();
-        activityLogRepository.save(log2);
+        activityLogCommandRepository.save(log2);
 
-        CursorPageResponse<ActivityLogResponse> response =
-                queryService.getIssueActivities(actorContext, issueKey, null, 10);
+        CursorPageResponse<ActivityLogResponse> response = queryService.getIssueActivities(
+                IssueIdentifier.of(workspace.getKey(), project.getKey(), issueKey), actor.getId(), null, 10);
 
         assertThat(response.content()).hasSize(2);
         assertThat(response.content().get(0).id()).isEqualTo(log2.getId());
@@ -135,12 +122,12 @@ class ActivityLogQueryIntegrationTest extends IntegrationTestSupport {
                 .actorMemberId(actor.getId())
                 .data(Map.of("test", "Sprint 1"))
                 .build();
-        activityLogRepository.save(log1);
+        activityLogCommandRepository.save(log1);
 
         CursorPageResponse<ActivityLogResponse> response =
-                queryService.getSprintActivities(actorContext, sprintId, null, 10);
+                queryService.getSprintActivities(workspace.getKey(), sprintId, actor.getId(), null, 10);
 
         assertThat(response.content()).hasSize(1);
-        assertThat(response.content().get(0).id()).isEqualTo(log1.getId());
+        assertThat(response.content().getFirst().id()).isEqualTo(log1.getId());
     }
 }
